# diabetic_diary

./: .gitignore  README.md
libs/: CMakeLists.txt  functions.cpp  functions.hpp  gemini.cpp  gemini.hpp  openai.cpp  openai.hpp
libs/ai_requester_lib/: CMakeLists.txt
libs/ai_requester_lib/include/: AIRequester.hpp
libs/ai_requester_lib/src/: AIRequester.cpp
services/: CMakeLists.txt
services/ai_requester_service/: CMakeLists.txt  ai_requester_service.cpp
services/model_tests/: accuracy_report.json  test.py
services/model_tests/dataset/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  11.json  12.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
services/model_tests/results/: 10_analysis.csv  10_analysis.html  11_analysis.csv  12_analysis.csv  12_analysis.html  2_analysis.csv  2_analysis.html  6_analysis.csv  6_analysis.html  7_analysis.csv  7_analysis.html  9_analysis.csv  9_analysis.html
services/model_tests_1/: CMakeLists.txt  model_tests_1.cpp  model_tests_do_real.cpp  model_tests_do_stats.cpp
services/model_tests_1/model_stats/: results.csv
services/model_tests_1/results/gemini-1.5-flash/: 02d20f89bcec57e0360299d15a9dabbc-small.jpg.json  0602d56178f1f779e2a6b614bcd6da78-small.jpg.json  08c5a2d696c8b62b477f0a2fb41acccf-small.jpg.json  117008e2e90e1241fb95090f3aec87b8-small.jpg.json  166b4dec6aa4c436659ff38b9e969b61-small.jpg.json  259142e74a195cfc086580dfcdf83fc4-small.jpg.json  2aeaa7fe4bcea9fb49ec6ff10bcd9a2b-small.jpg.json  3066672107a23b066c7348410c4f1d3e-small.jpg.json  377579531cfa1c117f28d66b64a73809-small.jpg.json  3b76e2733d73ea410fa82be08e5526a5-small.jpg.json  3bb5ff633783d408196bc7ab60a03212-small.jpg.json  3f408a6ab3647c9ca67344f4add3ce03-small.jpg.json  3f4bdbf216daf0c0a83755f141935e86-small.jpg.json  4a2af27ca669e46e25453e44ac91669f-small.jpg.json  5284917eb8c7f2bb0d82305808b613c4-small.jpg.json  616c144a976731206385dde92d0be6bb-small.jpg.json  6b61f61f122ce4dad31f1f40e6d826e5-small.jpg.json  70945aa2868fd52281596aee03b7f529-small.jpg.json  85f5d3db9349f9ddc884d3a8cb5af629-small.jpg.json  9fdbda31a9d114cf6cb5e7a7cf660b85-small.jpg.json  a21611ae58f14c729246a5e75283abf1-small.jpg.json  a3d39ce42ea52b10519794150c0a3bc5-small.jpg.json  ab31545a82954ebdfcc5e4e01a8e1881-small.jpg.json  b29d31bb5680c1f9ece044bfbaf13c44-small.jpg.json  b2ab05831f0cd5e060f48d528ae110ed-small.jpg.json  c05130178f0bb4a3224e9c76743eee78-small.jpg.json  d7c5954bdcac5b42c15764cf1be8cdcb-small.jpg.json  ed197f33b8fa53ed7c2c86491b7aa8bc-small (1).jpg.json  ed197f33b8fa53ed7c2c86491b7aa8bc-small.jpg.json  f01ead8ee2e4c2aaf5e2f15779119403-small.jpg.json  f04e5e4b5204a560c453069ad1bf3821-small.jpg.json  not_food_1.jpg.json  not_food_10.jpg.json  not_food_11.jpg.json  not_food_12.jpg.json  not_food_13.jpg.json  not_food_14.jpg.json  not_food_15.jpg.json  not_food_2.jpg.json  not_food_3.jpg.json  (+110 more)
services/model_tests_1/results/gemini-2.0-flash-exp/: 02d20f89bcec57e0360299d15a9dabbc-small.jpg.json  0602d56178f1f779e2a6b614bcd6da78-small.jpg.json  08c5a2d696c8b62b477f0a2fb41acccf-small.jpg.json  117008e2e90e1241fb95090f3aec87b8-small.jpg.json  166b4dec6aa4c436659ff38b9e969b61-small.jpg.json  259142e74a195cfc086580dfcdf83fc4-small.jpg.json  2aeaa7fe4bcea9fb49ec6ff10bcd9a2b-small.jpg.json  3066672107a23b066c7348410c4f1d3e-small.jpg.json  377579531cfa1c117f28d66b64a73809-small.jpg.json  3b76e2733d73ea410fa82be08e5526a5-small.jpg.json  3bb5ff633783d408196bc7ab60a03212-small.jpg.json  3f408a6ab3647c9ca67344f4add3ce03-small.jpg.json  3f4bdbf216daf0c0a83755f141935e86-small.jpg.json  4a2af27ca669e46e25453e44ac91669f-small.jpg.json  5284917eb8c7f2bb0d82305808b613c4-small.jpg.json  616c144a976731206385dde92d0be6bb-small.jpg.json  6b61f61f122ce4dad31f1f40e6d826e5-small.jpg.json  70945aa2868fd52281596aee03b7f529-small.jpg.json  85f5d3db9349f9ddc884d3a8cb5af629-small.jpg.json  9fdbda31a9d114cf6cb5e7a7cf660b85-small.jpg.json  a21611ae58f14c729246a5e75283abf1-small.jpg.json  a3d39ce42ea52b10519794150c0a3bc5-small.jpg.json  ab31545a82954ebdfcc5e4e01a8e1881-small.jpg.json  b29d31bb5680c1f9ece044bfbaf13c44-small.jpg.json  (+127 more)
services/web_server/: CMakeLists.txt  main.cc
services/web_server/controllers/: AuthenticatorController.cc  AuthenticatorController.h  FoodRecognitionController.cc  FoodRecognitionController.h  controller_utils.hpp
(+1374 files in other folders)
